<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/id_gem_oben"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/ic_gemusen_start_oben" />

    <LinearLayout
        android:id="@+id/start_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/id_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:contentDescription="@string/id_logo_text"
            android:src="@drawable/ic_wirf_logo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textAllCaps="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textAllCaps="false" />
    </LinearLayout>

    <ImageView
        android:id="@+id/id_gem_unten"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-7dp"
        android:contentDescription="@string/id_gem_unten"
        android:src="@drawable/ic_gemuse_start_unten" />

</RelativeLayout>