<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/profile_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/info_profile_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/info_profile_tv"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/full_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/full_name_et"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/phone_et"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/address_et"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/postCode_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/postCode_et"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_save_green"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/gem_unten"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-5dp"
        android:contentDescription="@string/gem_unten"
        android:src="@drawable/ic_gemuse_start_unten" />

</RelativeLayout>