<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <ImageView
        android:id="@+id/gem_oben"
        android:layout_width="match_parent"
        android:layout_height="100dp"
   android:layout_alignParentTop="true"
        android:src="@drawable/ic_gemusen_start_oben"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/info_post_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/info_post_tv"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/article_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/article_et"
            android:padding="10dp" />

        <EditText
            android:id="@+id/unit_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/unit_et"
            android:padding="10dp" />

        <EditText
            android:id="@+id/price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/price_et"
            android:padding="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />


        <TextView
            android:id="@+id/full_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:padding="10dp" />

        <TextView
            android:id="@+id/adress_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:padding="10dp" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:padding="10dp" />

        <TextView
            android:id="@+id/postCode_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:padding="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/done_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_done_all_green_24dp" />

        <TextView
            android:id="@+id/not_post_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/not_post_tv" />


    </LinearLayout>
</RelativeLayout>